# signals

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation-and-privacy-sanitizer/: 01-01-PLAN.md  01-02-PLAN.md  (+3 more)
.planning/phases/01-foundation-and-privacy-sanitizer/: 01-01-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-imap-fetch/: 02-01-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-summarize-deliver-and-pipeline-assembly/: 03-01-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-VALIDATION.md
.planning/phases/04-weekly-rollup-cron-and-documentation/: 04-01-PLAN.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-tech-debt-cleanup/: 05-01-PLAN.md  05-02-PLAN.md  05-VALIDATION.md
.planning/quick/1-add-uv-alternative-instructions-to-readm/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-add-option-to-include-urls-in-digest-ema/: 2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
prompts/: summarize.txt  weekly.txt
scripts/: daily.py  dry-run.sh  run-digest.sh  run-weekly.sh  weekly.py
src/: config.py  deliver.py  fetch.py  models.py  sanitizer.py  summarize.py
tests/: conftest.py  test_daily.py  test_deliver.py  test_fetch.py  test_fetch_integration.py  test_sanitizer.py  test_summarize.py  test_weekly.py
(+17 files in other folders)
